# elip-sp-reference

./: Cargo.toml  README.md  TAPROOT_ANALYSIS.md
python/: .gitignore  README.md  pyproject.toml
python/elip_sp_reference/: __init__.py  bech32m.py  core.py
python/tests/: test_vectors.py
src/: lib.rs
